screen_size_limit
@media screen max screen size limit to be 600px

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <input class="btn" type="submit" value="Log-in">
       <a href="#">Forgot username/password</a>
     </form>
+    <div id="screen_size_limit">
+      <span>Please adjust screen size</span>
+    </div>
     <footer>
       <span>&copy; 2021 SL</span>
     </footer>
