--- a/more.html
+++ b/more.html
@@ -35,7 +35,7 @@
     <main class="main-screen">
       <div class="user-component">
         <div class="user-component__coloumn">
-          <image class="user-component__icon__sm" src="#" />
+          <image class="user-component__icon__sm" src="images/daimon.jpg" />
           <div class="user-component__text">
             <h4 class="user-component__name">Test</h4>
             <h6 class="user-component__subtitle">testing</h6>
@@ -112,6 +112,9 @@
         </li>
       </ul>
     </nav>
+    <div id="screen_size_limit">
+      <span>Please adjust screen size</span>
+    </div>
     <footer>
       <span>&copy; 2021 SL</span>
     </footer>
