--- a/search.html
+++ b/search.html
@@ -105,6 +105,9 @@
         </li>
       </ul>
     </nav>
+    <div id="screen_size_limit">
+      <span>Please adjust screen size</span>
+    </div>
     <footer>
       <span>&copy; 2021 SL</span>
     </footer>
