--- a/friends.html
+++ b/friends.html
@@ -87,10 +87,13 @@
           <a href="search.html" class="nav__link"><i class='fas fa-2x fa-search'></i></a>
         </li>
         <li class="nav__btn">
-          <a href="#" class="nav__link"><i class='fas fa-2x fa-ellipsis-h'></i></a>
+          <a href="more.html" class="nav__link"><i class='fas fa-2x fa-ellipsis-h'></i></a>
         </li>
       </ul>
     </nav>
+    <div id="screen_size_limit">
+      <span>Please adjust screen size</span>
+    </div>
     <footer>
       <span>&copy; 2021 SL</span>
     </footer>
