--- a/chat.html
+++ b/chat.html
@@ -68,7 +68,7 @@
           <a href="search.html" class="nav__link"><i class='fas fa-2x fa-search'></i></a>
         </li>
         <li class="nav__btn">
-          <a href="#" class="nav__link"><i class='fas fa-2x fa-ellipsis-h'></i></a>
+          <a href="more.html" class="nav__link"><i class='fas fa-2x fa-ellipsis-h'></i></a>
         </li>
       </ul>
     </nav>
